fix ls output margin when on mobile

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
 }
 
 .response-tags {
-    margin: 10px 0 10px 10px;
+    margin: 10px 10px 10px 10px;
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
